pgpool2 (3.1-1) unstable; urgency=low

  * New upstream release.
  * Build pgpool-recovery pgpool-regclass pgpool-walrecrunning modules.
    Closes: #630465.

 -- Christoph Berg <myon@debian.org>  Tue, 04 Oct 2011 10:01:44 +0200

pgpool2 (3.0.4-1) unstable; urgency=low

  * New upstream release
  * Use format 3.0 (quilt).

 -- Christoph Berg <myon@debian.org>  Fri, 10 Jun 2011 10:18:29 +0200

pgpool2 (3.0.3-2) unstable; urgency=low

  * Upload to unstable.

 -- Christoph Berg <myon@debian.org>  Thu, 31 Mar 2011 11:53:04 +0200

pgpool2 (3.0.3-1) experimental; urgency=low

  * New maintainer, thanks Rodolphe for the permission to take over.
  * New upstream version.
    + Builds correctly. Closes: #556059, #607841.
  * Convert to use quilt and dh 7.
  * Move example files to /usr/share/doc.
  * Patch example config files, thanks Andre Felipe Machado.
    Also remove manpage page. Closes: #590570.

 -- Christoph Berg <myon@debian.org>  Wed, 30 Mar 2011 17:23:22 +0200

pgpool2 (2.2.5-2) experimental; urgency=low

  * Auto-configure listen port in postinst

 -- Rodolphe Quiédeville <rodolphe@quiedeville.org>  Mon, 16 Nov 2009 18:23:56 +0100

pgpool2 (2.2.5-1) experimental; urgency=low

  [ Rodolphe Quiédeville ]
	
  * New upstream release. (Closes: #464345)
  * New Maintainer. (Closes: #471826, #491893)
  * Move pid file to /var/run/postgresql

  [ Andreas Putzo ]
  
  * Bumped policy to 3.8.0, without changes.
  * Update init script to source correct default/pgpool2. (Closes: #497952)
  * Move conffiles to /etc/pgpool2/ in preinst/postinst.
    Explain new config file location in README.Debian.
    (Closes: #428802)
  * Mention license of parser/gram.c in debian/copyright.
  * Add manpage.patch to fix a typo that caused a lintian warning.

 -- Rodolphe Quiédeville <rodolphe@quiedeville.org>  Mon, 12 Oct 2009 14:37:47 +0200

pgpool2 (1.3-2) unstable; urgency=low

  * Updated standards version
  * Fixed LSB headers in init.d script (closes: #471100)