@@ -10,13 +10,16 @@
  include $(PGXS)
  else
  subdir = contrib
-@@ -42,4 +43,5 @@
+@@ -42,4 +43,8 @@
  		pgpool-regclass	\
  		pgpool-walrecrunning
  
 -$(recurse)
 +all clean install:
-+	set -e ; for dir in $(SUBDIRS) ; do $(MAKE) -C $$dir $@ ; done
++	set -e ; for dir in $(SUBDIRS) ; do \
++		[ $$dir = pgpool-walrecrunning ] && [ ! -f $$($(PG_CONFIG) --includedir-server)/replication/walreceiver.h ] && continue ; \
++		$(MAKE) -C $$dir $@ ; \
++	done
 --- a/sql/pgpool-recovery/Makefile
 +++ b/sql/pgpool-recovery/Makefile
 @@ -11,7 +11,8 @@
